--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.enabled=true
+
+server.port=${PORT}
+
+schedule.database.url=${DB_URL}
+schedule.database.name=${DB_NAME}
